--- a/manual_control/CMakeLists.txt
+++ b/manual_control/CMakeLists.txt
@@ -5,7 +5,7 @@ project(manual_control)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED roscpp motor_communication send_steering)
+find_package(catkin REQUIRED roscpp send_steering)
 
 
 ## System dependencies are found with CMake's conventions
@@ -50,7 +50,7 @@ find_package(catkin REQUIRED roscpp motor_communication send_steering)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 	LIBRARIES ${PROJECT_NAME}
-	CATKIN_DEPENDS motor_communication send_steering
+	CATKIN_DEPENDS send_steering
 )
 
 
