--- a/auto_stop/package.xml
+++ b/auto_stop/package.xml
@@ -43,11 +43,16 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>motor_communication</build_depend>
-  <run_depend>motor_communication</run_depend>
+    <build_depend>geometry_msgs</build_depend>
+
+  
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
+    <run_depend>sensor_msgs</run_depend>
+    <run_depend>geometry_msgs</run_depend>
+
+  
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
