--- a/heading/package.xml
+++ b/heading/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>motor_communication</name>
+  <name>heading</name>
   <version>0.0.0</version>
-  <description>Send the speed command through serial port</description>
+  <description>Reading car heading angle through serial port (The heading angle is calculated by arduino and MPU6050)</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -40,19 +40,14 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>serial</build_depend>
-  <run_depend>serial</run_depend>
-  <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>serial</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-
-  
 
   <run_depend>roscpp</run_depend>
+  <run_depend>serial</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
 
 
 
